k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prodia
  labels:
    app.kubernetes.io/part-of: simple-app-portal
