k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodia-backend
  namespace: prodia
  labels:
    app: prodia-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prodia-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: prodia-backend
    spec:
      containers:
        - name: backend
          image: ilyasjaelani/prodia-backend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: prodia-backend-svc
  namespace: prodia
spec:
  selector:
    app: prodia-backend
  ports:
    - port: 5001
      targetPort: 5001
