k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodia-frontend
  namespace: prodia
  labels:
    app: prodia-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prodia-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: prodia-frontend
    spec:
      containers:
        - name: frontend
          image: ilyasjaelani/prodia-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: prodia-frontend-svc
  namespace: prodia
spec:
  selector:
    app: prodia-frontend
  ports:
    - port: 80
      targetPort: 5000
