k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodia-ingress
  namespace: prodia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: prodia-backend-svc
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prodia-frontend-svc
                port:
                  number: 80
